--- a/config
+++ b/config
@@ -1075,4 +1075,5 @@ format-padding = 1
 ;  Discord Icon Temporary (FontAwesome)
 ;  OnlyOffice Icon (FontAwesome)
 ;  Youtube Icon (FontAwesome)
+;  Brightness Icon (FontAwesome)
 ; 
