--- a/config
+++ b/config
@@ -992,7 +992,10 @@ click-left = pavucontrol &
 label = %output%
 
 
-#################################################################
+
+#################################
+#######  Chromium Browser #######
+#################################
 
 [module/chromium]
 type = custom/script
