--- a/config
+++ b/config
@@ -315,7 +315,7 @@ foreground = ${colors.foreground}
 line-size = 2
 line-color = #f00
 
-;wm-restack = bspwm
+wm-restack = bspwm
 override-redirect = true
 
 ; Enable support for inter-process messaging
